# study

./: .emacs  .gitignore  .gitignore_global  .project  .pydevproject  .pydevproject.bak  AWS.txt  README  math.tex  mizuno-san.txt  ubuntu-win10-2.txt  ubuntu-win10.txt
.emacs.d/: init.el  kkcrc
FB/: .classpath  .project
GCJ/: .project  .pydevproject
LLM/: .gitignore
LLM/DA-Elyza2024/python/sample-server/: pyproject.toml
LLM/DA-Elyza2024/python/sample-server/llm-server/: pyproject.toml
R/: .Rhistory  install-error.txt  mytest.R
actuary/: .gitignore  1004_早瀬_円金利上昇時の影響.txt  20230504-保険1第1章営業保険料.md  20230504-保険1第1章営業保険料.md-from-master  20230509-保険2第1章-生命保険会計.md  20230527-2018lifetable.aux  20230527-2018lifetable.bbl  20230527-2018lifetable.tex  20230905-tokuteibunya-shokikyoiku.txt  20230922-tokuteibunya-shokikyoiku.txt  akuken0923.txt  config.tex  for-tex.sh  hoken-rename.sh  hoken1-1-営業保険料.tex  hoken1-2-解約及び解約返戻金.tex  hoken1-4-生命保険の商品開発.tex  hoken1-7-医療保険.tex  hoken2-1-生命保険会計.tex  hoken2-3-契約者配当.tex  hoken2-8-相互会社と株式会社.tex  memo.txt  output.aux  output.dvi  output.out.ps  output.tex  packages.tex  prob-ans.sed  references.bib  seiho-regulations.tex  seiho1-1-営業保険料.tex  seiho1-10-商品毎収益検証.tex  seiho1-2-解約及び解約返戻金.tex  seiho1-3-AssetShare.tex  seiho1-4-生命保険の商品開発.tex  seiho1-5-変額年金保険.tex  seiho1-6-団体生命保険.tex  seiho1-7-医療保険.tex  seiho1-8-再保険.tex  seiho1-Year-regulations.tex  (+14 more)
anki/: akuken.anki  mathA.1.anki  mathA.2.2.3.anki  mathA.2.2.4.anki  mathA.2.2.5.anki  mathA.2.anki  mathA.3.2.anki  mathA.3.anki  mathA.4.1.anki  nenkin.anki  seiho5.1.anki  seiho5.2.anki  (+13 more)
(+923 files in other folders)
